--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "homepage": "https://github.com/RutuNaikBhatt1/pw-sdet-u#readme",
   "devDependencies": {
     "@playwright/test": "^1.43.0",
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-playwright": "^1.6.0"
   }
 }
