--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "homepage": "https://github.com/RutuNaikBhatt1/pw-sdet-u#readme",
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@playwright/test": "^1.43.0",
+    "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
+    "allure-commandline": "^2.28.0",
+    "allure-playwright": "^2.15.1",
     "eslint": "^8.56.0",
     "eslint-plugin-playwright": "^1.6.0"
   }
