--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "allure-commandline": "^2.28.0",
     "allure-playwright": "^2.15.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-playwright": "^1.6.0"
+    "eslint-plugin-playwright": "^1.6.0",
+    "playwright-slack-report": "^1.1.72"
   }
 }
